# wgpu_tutorial

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
